@@ -124,18 +124,33 @@ ACLOCAL_AMFLAGS=-I m4 --install
 EXTRA_DIST=COPYING.GPL3
 
 CSTD_CFLAGS=-std=c89
-#CSTD_CFLAGS=-std=gnu11 -DEBHI_CAN_BACKTRACE=1
+#CSTD_CFLAGS=-std=gnu11
 
-ALLOCA_FLAGS=
-#ALLOCA_FLAGS=-DEHBI_NO_ALLOCA=1
-
-VERBOSE_ANNOUNCE=0
-#VERBOSE_ANNOUNCE=1
-DEBUG_CFLAGS=-ggdb -O3 -rdynamic
+DEBUG_CFLAGS=-ggdb -O2
 #DEBUG_CFLAGS=-ggdb -O0
 
 NOISY_CFLAGS=-Wall -Wextra -pedantic -Werror
-AM_CFLAGS=$(CSTD_CFLAGS) $(DEBUG_CFLAGS) $(NOISY_CFLAGS) $(ALLOCA_FLAGS)
+
+ALLOCA_CFLAGS=
+#ALLOCA_CFLAGS=-DEHBI_NO_ALLOCA=1
+
+#TODO get configure/autoconf to work right here
+#if HAVE_BACKTRACE
+#if HAVE_BACKTRACE_SYMBOLS_FD
+BACKTRACE_CFLAGS=-D_POSIX_SOURCE -DEBHI_CAN_BACKTRACE -rdynamic
+#endif
+#else
+#BACKTRACE_CFLAGS=
+#endif
+
+VERBOSE_ANNOUNCE=0
+#VERBOSE_ANNOUNCE=1
+
+AM_CFLAGS=$(CSTD_CFLAGS) \
+ $(DEBUG_CFLAGS) \
+ $(NOISY_CFLAGS) \
+ $(ALLOCA_CFLAGS) \
+ $(BACKTRACE_CFLAGS)
 
 # extracted from https://github.com/torvalds/linux/blob/master/scripts/Lindent
 LINDENT=indent -npro -kr -i8 -ts8 -sob -l80 -ss -ncs -cp1 -il0
