@@ -1,3 +1,13 @@
+2016-11-06  Eric Herman <eric@freesa.org>
+
+	fight with autotools to get backtrace to work, defeated
+
+	* configure.ac: add checks for backtrace, backtrace_symbols_fd
+	* Makefile.am: head->desk, just define _POSIX_SOURCE and retreat
+	* src/ehbigint-log.h: add more concise ehbi_debug_to_hex
+	* src/ehbigint-log.c: ifdef _POSIX_SOURCE; ehbi_debug_to_hex
+
+
 2016-11-05  Eric Herman <eric@freesa.org>
 
 	fix a bug in ehbi_bytes_shift_left
